--- a/views/admin/type-related.pug
+++ b/views/admin/type-related.pug
@@ -1,5 +1,5 @@
 .form-group
-	select(name= name data-validate= options.validate)
+	select.select-css(name= name data-validate= options.validate)
 		option(value="") ---
 		for row in related
 			if row.id == value
