--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -302,8 +302,8 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			background-color:#333
 			color: #eee
 
-.select-row
-	&:hover
+tr.hovering
+	td
 		cursor: pointer
 		background-color: #eee
 
@@ -346,6 +346,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			.mdc-switch
 				margin: 1em
 			.label
+				width: 250px
 				&.edit
 					padding-top:18px
 				&:first-child
