pass in a cache object for prepare & resolve (don't store values in adminColumn instance.)
resolve for getDiaplayValue
prepare for getForm

--- a/views/admin/edit.pug
+++ b/views/admin/edit.pug
@@ -34,7 +34,7 @@ block content
 										li.label.edit
 											= admin.getColumn(property).options.label
 											ul
-												li.data!= admin.getColumn(property).getForm(row)
+												li.data!= admin.getColumn(property).getForm(row, prepared[property])
 
 							section.form-group.pull-right.button-bar
 								a.mdc-button(href= mountpoint + '/' + admin.name + '/' + row.id) Cancel
