--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -33,7 +33,7 @@ block content
 											li.label.edit
 												= admin.getColumn(property).options.label
 												ul
-													li!= admin.getColumn(property).getForm(row)
+													li!= admin.getColumn(property).getForm(row,prepared[property])
 
 							section.form-group.pull-right.button-bar
 								a.mdc-button(href= mountpoint + '/' + admin.name) Cancel
@@ -41,3 +41,6 @@ block content
 									span.mdc-button__label Save
 								
 						.ajax-errors
+							
+		// p prepared
+		// pre= JSON.stringify(prepared,"",2)
