--- a/views/admin/edit.pug
+++ b/views/admin/edit.pug
@@ -42,3 +42,6 @@ block content
 									span.mdc-button__label Save
 							
 						.ajax-errors
+		
+		// p prepared
+		// pre= JSON.stringify(prepared,"",2)
