--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -27,6 +27,8 @@ $darker-accent: #95c200;
 @import "@material/select/mdc-select";
 @import "@material/switch/mdc-switch";
 @import "@material/linear-progress/mdc-linear-progress";
+@import "@material/ripple/mdc-ripple";
+@import "@material/chips/mdc-chips";
 
 $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
