--- a/views/admin/view.pug
+++ b/views/admin/view.pug
@@ -37,6 +37,7 @@ block content
 									= 'row'
 									ul
 										li= row.id
+										
 								if fk
 									li.label
 										= fk
@@ -49,13 +50,25 @@ block content
 											= property
 											ul
 												li.data!= admin.getColumn(property).getDisplayValue(row,prepared[property])
-											
-						for dependant in dependants
-							p
-								button.mdc-button.add-button(data-target= dependant.table data-fk= dependant.fk data-belongs-to= row.id)
-									i.material-icons add_circle
-								
-								= dependant.table + ' (' + dependant.rows.count + ' rows)'
+						
+						if !admin.options.skipReferences
+							// belongs to many relationships (through tables)
+							for manyThrough in admin.options.hasManyThrough
+								if manyThroughs[manyThrough.as].rows.length
+									p= manyThrough.as
+									.mdc-chip-set
+										for through in manyThroughs[manyThrough.as].rows
+											.mdc-chip
+												.mdc-chip__ripple
+												span.mdc-chip__text= through.description
+							
+							// has many relationships
+							for dependant in dependants
+								p
+									button.mdc-button.add-button(data-target= dependant.table data-fk= dependant.fk data-belongs-to= row.id)
+										i.material-icons add_circle
+									
+									= dependant.table + ' (' + dependant.rows.count + ' rows)'
 								
 								table
 									for rel in dependant.rows.rows
@@ -63,9 +76,12 @@ block content
 											td
 												- let relAdmin = adminTables[dependant.table]
 												a(href= mountpoint + '/' + dependant.table + '/' + rel.id)= rel[relAdmin.options.defaultColumn]
+	//
+		p ManyThroughs
+		pre= JSON.stringify(manyThroughs,"",2)
 		
-		p prepared
-		pre= JSON.stringify(prepared,"",2)
+		p Dependants
+		pre= JSON.stringify(dependants,"",2)
 
 		p Dependants
 		pre= JSON.stringify(dependants,"",2)
@@ -75,3 +91,6 @@ block content
 		
 		p Associations
 		pre= JSON.stringify(assoc,"",2)
+		
+		p Options
+		pre= JSON.stringify(admin.options,"",2)
