--- a/views/admin/edit.pug
+++ b/views/admin/edit.pug
@@ -2,9 +2,9 @@ extends ../wrapper
 
 block content
 	- let back = mountpoint + '/' + admin.name;
-	if admin.options.parent
-		- back = mountpoint + '/' + admin.options.parent.table + '/' + row[admin.options.parent.fk]
-
+	if (admin.options.behavior === 'child') && fk
+		- back = mountpoint + '/' + pt + '/' + row[fk]
+		
 	.admin-container
 		.admin.clear-fix.mdc-elevation--z1
 			div(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= back)
@@ -36,15 +36,16 @@ block content
 												ul
 													li.data!= admin.getColumn(property).getForm(row, prepared[property])
 
-									// belongs to many relationships (through tables)
-									for manyThrough in admin.options.hasManyThrough
-										li.label
-											= manyThrough.as
-											ul
-												li.data!= admin.getColumn(manyThrough.as).getForm(row,prepared[manyThrough.as],{resolved:manyThroughs[manyThrough.as]})
+									if (admin.options.behavior !== 'reference')
+										// belongs to many relationships (through tables)
+										for manyThrough in admin.options.hasManyThrough
+											li.label
+												= manyThrough.as
+												ul
+													li.data!= admin.getColumn(manyThrough.as).getForm(row,prepared[manyThrough.as],{resolved:manyThroughs[manyThrough.as]})
 														
 							section.form-group.pull-right.button-bar
-								a.mdc-button(href= mountpoint + '/' + admin.name + '/' + row.id) Cancel
+								a.mdc-button(href= back) Cancel
 								button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
 									span.mdc-button__label Save
 							
