--- a/views/admin/create.pug
+++ b/views/admin/create.pug
@@ -11,9 +11,9 @@ block content
 			
 				.page-header
 					h2
-						a(href= back)
+						a.back-button(href= back)
 							i.material-icons arrow_back_ios
-						= admin.name + ' table create row'
+						= admin.name + ': create'
 					
 				.page-content
 					.admin-form
