--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -42,6 +42,15 @@ h1,h2,h3,h4
 	.screen-xsmall &
 		top: 56px
 
+.page-header
+	padding-top: 1em
+	.no-icon
+		margin-left: 2em
+	.back-button
+		margin-left:.75em
+	.action
+		margin-right: 2em
+
 .page-content
 	background-color: white
 	min-height: calc(80vh - 200px)
@@ -275,7 +284,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 		border-collapse: separate
 		*border-collapse: collapse
 		border-radius: 4px
-		border-left:0
+		border-left: 0
 		border-spacing: 0
 		th,td
 			padding: .5em
@@ -286,21 +295,21 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			td
 				border-bottom:thin solid #dddddd
 	.flextable-header
-		background-color:#333
-		color: #eee
+		background-color:#ddd
 	.flextable-row-header
 		text-align: left
 
 	&.folded
+		.flextable-cell
+			height: 30px
+			padding-bottom: 1.5em
 		.flextable-header
 			text-align:left
 			background-color:#eee
-			color: #333
 		.flextable-row-header
 			font-weight: bold
 			text-align: left!important
-			background-color:#333
-			color: #eee
+			background-color:#ddd
 
 tr.hovering
 	td
