--- a/views/admin/edit.pug
+++ b/views/admin/edit.pug
@@ -18,7 +18,7 @@ block content
 						
 						if canDelete
 							.pull-right.action
-								button.mdc-button.delete-button
+								.delete-button
 									i.material-icons delete_forever
 										
 				.page-content
