--- a/views/users/photo.pug
+++ b/views/users/photo.pug
@@ -6,8 +6,8 @@ block content
 			<i class="material-icons">person</i> 
 			= user.username + ' profile photo'
 
-	.admin-container
-		.admin.clear-fix.mdc-elevation--z1
+	.reg-form-container.centered
+		.reg-form.clear-fix.mdc-elevation--z1
 			.admin-form
 				form.form-validation(action="/users/profile-photo" method="PATCH" data-jsclass="formController,formValidator" data-submitter="#submitter" data-redirect="/users/settings")
 					table
