host material icons, validation for notHTML

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -35,6 +35,9 @@ $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/solid";
 @import "@fortawesome/fontawesome-free/scss/regular";
 
+$material-design-icons-font-directory-path: '~material-design-icons-iconfont/dist/fonts/';
+
+@import '~material-design-icons-iconfont/src/material-design-icons';
 
 .progress {
 	@include mdc-linear-progress-bar-color($darker-accent);
