admin route errors call next()
global error handler hijax aware

hijax handle x-digitopia headers for error messages

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,4 +1,9 @@
-div
+extends wrapper
+
+block content
+
   pre= message
-  p= error.status
-  pre #{error.stack}
+  
+  if verbose
+    p= error.status
+    pre #{error.stack}
