--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -9,9 +9,9 @@ html
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     meta(name="format-detection" content="telephone=no")
-    link(rel="apple-touch-icon" href="/images/logo.png")
-
+    link(rel="apple-touch-icon" href="/apple-touch-icon.png")
     meta(name="apple-mobile-web-app-title" content= sitename)
+      
     title= sitename
     
     if env === 'production'
