rename TRACK... publicOptions

--- a/views/admin/menu.pug
+++ b/views/admin/menu.pug
@@ -8,6 +8,6 @@ block content
 			
 			.page-content
 				nav.mdc-list
-					a.mdc-list-item(href= publicOptions.TRACK_USER_BEHAVIOR.mountPoint + '/dashboard') Analytics
+					a.mdc-list-item(href= publicOptions.USER_BEHAVIOR.mountPoint + '/dashboard') Analytics
 					for table in tables
 						a.mdc-list-item(href="/admin/" + table)= table
