--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -9,4 +9,4 @@ block content
 			.page-content
 				p A bunch of charts here
 				
-				div(data-jsclass="digitopiaAnalyticsReport" data-endpoint= publicOptions.TRACK_USER_BEHAVIOR.mountPoint + '/report')
+				div(data-jsclass="digitopiaAnalyticsReport" data-endpoint= publicOptions.USER_BEHAVIOR.mountPoint + '/report')
