fix upload path after moving admin from lib to modules

--- a/views/users/photo.pug
+++ b/views/users/photo.pug
@@ -17,3 +17,5 @@ block content
 						a.mdc-button(href="/users/settings") Cancel
 						button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
 							span.mdc-button__label Save
+					
+					.ajax-errors
